--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -14,6 +14,184 @@
 					<a href="text/imprint.xhtml">Imprint</a>
 				</li>
 				<li>
+					<a href="text/dedication.xhtml">Dedication</a>
+				</li>
+				<li>
+					<a href="text/epigraph.xhtml">Epigraph</a>
+				</li>
+				<li>
+					<a href="text/halftitlepage.xhtml">Little Caesar</a>
+					<ol>
+						<li>
+							<a href="text/part-1.xhtml">Part <span epub:type="z3998:roman">I</span></a>
+							<ol>
+								<li>
+									<a href="text/chapter-1-1.xhtml" epub:type="z3998:roman">I</a>
+								</li>
+								<li>
+									<a href="text/chapter-1-2.xhtml" epub:type="z3998:roman">II</a>
+								</li>
+								<li>
+									<a href="text/chapter-1-3.xhtml" epub:type="z3998:roman">III</a>
+								</li>
+								<li>
+									<a href="text/chapter-1-4.xhtml" epub:type="z3998:roman">IV</a>
+								</li>
+								<li>
+									<a href="text/chapter-1-5.xhtml" epub:type="z3998:roman">V</a>
+								</li>
+								<li>
+									<a href="text/chapter-1-6.xhtml" epub:type="z3998:roman">VI</a>
+								</li>
+							</ol>
+						</li>
+						<li>
+							<a href="text/part-2.xhtml">Part <span epub:type="z3998:roman">II</span></a>
+							<ol>
+								<li>
+									<a href="text/chapter-2-1.xhtml" epub:type="z3998:roman">I</a>
+								</li>
+								<li>
+									<a href="text/chapter-2-2.xhtml" epub:type="z3998:roman">II</a>
+								</li>
+								<li>
+									<a href="text/chapter-2-3.xhtml" epub:type="z3998:roman">III</a>
+								</li>
+								<li>
+									<a href="text/chapter-2-4.xhtml" epub:type="z3998:roman">IV</a>
+								</li>
+								<li>
+									<a href="text/chapter-2-5.xhtml" epub:type="z3998:roman">V</a>
+								</li>
+								<li>
+									<a href="text/chapter-2-6.xhtml" epub:type="z3998:roman">VI</a>
+								</li>
+								<li>
+									<a href="text/chapter-2-7.xhtml" epub:type="z3998:roman">VII</a>
+								</li>
+							</ol>
+						</li>
+						<li>
+							<a href="text/part-3.xhtml">Part <span epub:type="z3998:roman">III</span></a>
+							<ol>
+								<li>
+									<a href="text/chapter-3-1.xhtml" epub:type="z3998:roman">III</a>
+								</li>
+								<li>
+									<a href="text/chapter-3-2.xhtml" epub:type="z3998:roman">II</a>
+								</li>
+								<li>
+									<a href="text/chapter-3-3.xhtml" epub:type="z3998:roman">III</a>
+								</li>
+								<li>
+									<a href="text/chapter-3-4.xhtml" epub:type="z3998:roman">IV</a>
+								</li>
+								<li>
+									<a href="text/chapter-3-5.xhtml" epub:type="z3998:roman">V</a>
+								</li>
+								<li>
+									<a href="text/chapter-3-6.xhtml" epub:type="z3998:roman">VI</a>
+								</li>
+								<li>
+									<a href="text/chapter-3-7.xhtml" epub:type="z3998:roman">VII</a>
+								</li>
+							</ol>
+						</li>
+						<li>
+							<a href="text/part-4.xhtml">Part <span epub:type="z3998:roman">IV</span></a>
+							<ol>
+								<li>
+									<a href="text/chapter-4-1.xhtml" epub:type="z3998:roman">I</a>
+								</li>
+								<li>
+									<a href="text/chapter-4-2.xhtml" epub:type="z3998:roman">II</a>
+								</li>
+								<li>
+									<a href="text/chapter-4-3.xhtml" epub:type="z3998:roman">III</a>
+								</li>
+								<li>
+									<a href="text/chapter-4-4.xhtml" epub:type="z3998:roman">IV</a>
+								</li>
+								<li>
+									<a href="text/chapter-4-5.xhtml" epub:type="z3998:roman">V</a>
+								</li>
+								<li>
+									<a href="text/chapter-4-6.xhtml" epub:type="z3998:roman">VI</a>
+								</li>
+							</ol>
+						</li>
+						<li>
+							<a href="text/part-5.xhtml">Part <span epub:type="z3998:roman">V</span></a>
+							<ol>
+								<li>
+									<a href="text/chapter-5-1.xhtml" epub:type="z3998:roman">I</a>
+								</li>
+								<li>
+									<a href="text/chapter-5-2.xhtml" epub:type="z3998:roman">II</a>
+								</li>
+								<li>
+									<a href="text/chapter-5-3.xhtml" epub:type="z3998:roman">III</a>
+								</li>
+								<li>
+									<a href="text/chapter-5-4.xhtml" epub:type="z3998:roman">IV</a>
+								</li>
+								<li>
+									<a href="text/chapter-5-5.xhtml" epub:type="z3998:roman">V</a>
+								</li>
+							</ol>
+						</li>
+						<li>
+							<a href="text/part-6.xhtml">Part <span epub:type="z3998:roman">VI</span></a>
+							<ol>
+								<li>
+									<a href="text/chapter-6-1.xhtml" epub:type="z3998:roman">I</a>
+								</li>
+								<li>
+									<a href="text/chapter-6-2.xhtml" epub:type="z3998:roman">II</a>
+								</li>
+								<li>
+									<a href="text/chapter-6-3.xhtml" epub:type="z3998:roman">III</a>
+								</li>
+								<li>
+									<a href="text/chapter-6-4.xhtml" epub:type="z3998:roman">IV</a>
+								</li>
+								<li>
+									<a href="text/chapter-6-5.xhtml" epub:type="z3998:roman">V</a>
+								</li>
+								<li>
+									<a href="text/chapter-6-6.xhtml" epub:type="z3998:roman">VI</a>
+								</li>
+								<li>
+									<a href="text/chapter-6-7.xhtml" epub:type="z3998:roman">VII</a>
+								</li>
+							</ol>
+						</li>
+						<li>
+							<a href="text/part-7.xhtml">Part <span epub:type="z3998:roman">VII</span></a>
+							<ol>
+								<li>
+									<a href="text/chapter-7-1.xhtml" epub:type="z3998:roman">I</a>
+								</li>
+								<li>
+									<a href="text/chapter-7-2.xhtml" epub:type="z3998:roman">II</a>
+								</li>
+								<li>
+									<a href="text/chapter-7-3.xhtml" epub:type="z3998:roman">III</a>
+								</li>
+								<li>
+									<a href="text/chapter-7-4.xhtml" epub:type="z3998:roman">IV</a>
+								</li>
+								<li>
+									<a href="text/chapter-7-5.xhtml" epub:type="z3998:roman">V</a>
+								</li>
+								<li>
+									<a href="text/chapter-7-6.xhtml" epub:type="z3998:roman">VI</a>
+								</li>
+							</ol>
+						</li>
+					</ol>
+				</li>
+				<li>
 					<a href="text/colophon.xhtml">Colophon</a>
 				</li>
 				<li>
@@ -23,7 +201,11 @@
 		</nav>
 		<nav id="landmarks" epub:type="landmarks">
 			<h2 epub:type="title">Landmarks</h2>
-			<ol/>
+			<ol>
+				<li>
+					<a href="text/part-1.xhtml" epub:type="bodymatter">Little Caesar</a>
+				</li>
+			</ol>
 		</nav>
 	</body>
 </html>
