--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -21,9 +21,9 @@
 			and is based on digital scans from the<br/>
 			<a href="https://archive.org/details/littlecaesar00burn">Internet Archive</a>.</p>
 			<p>The cover page is adapted from<br/>
-			<i epub:type="se:name.visual-art.painting">PAINTING</i>,<br/>
-			a painting completed in <time>YEAR</time> by<br/>
-			<a href="COVER_ARTIST_WIKI_URL">COVER_ARTIST</a>.<br/>
+			<i epub:type="se:name.visual-art.painting">Snow Bird</i>,<br/>
+			a painting completed in <time>1928</time> by<br/>
+			<b epub:type="z3998:personal-name">Fred Craft</b>.<br/>
 			The cover and title pages feature the<br/>
 			<b epub:type="se:name.visual-art.typeface">League Spartan</b> and <b epub:type="se:name.visual-art.typeface">Sorts Mill Goudy</b><br/>
 			typefaces created in <time>2014</time> and <time>2009</time> by<br/>
